# fastapi-ca

./: .env  .ruff.toml  README.md  dev.sh  docker-compose.dev.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2025_01_10_1333-6c3af032aa73_add_user_table.py  2025_01_10_1342-2db35456b58c_add_user_table2.py  2025_01_10_1541-2cfd7c36bf4d_user_add_memo.py  2025_01_15_1520-39c0f18abb5a_add_patient_table.py  2025_01_15_1521-f093f0966b9c_add_patient_table.py  2025_01_15_1532-6f902c7df00d_result_status.py  2025_02_20_1338-8b3e99388863_add_note_tag.py
src/: config.py  containers.py  database.py  database_models.py  main.py  sync.py  test.py
src/common/: auth.py
src/note/application/: note_service.py
src/note/domain/repository/: note_repo.py
src/note/infra/repository/: note_repo.py
src/note/infra/schema/: note.py
src/note/interface/controllers/: note_controller.py
src/patient/application/: patient_service.py
src/patient/domain/: patient.py
src/patient/domain/repository/: patient_repo.py
src/patient/infra/repository/: patient_repo.py
src/patient/infra/schema/: patient.py
src/patient/interface/controllers/: patient_controller.py
src/user/application/: user_service.py
src/user/domain/repository/: user_repo.py
src/user/infra/repository/: user_repo copy.py  user_repo.py
src/user/infra/schema/: user.py
src/user/interface/controllers/: user_controller.py
src/utils/: crypto.py  db_utils.py
